Change DEBUG-->AUDIO_DEBUG. PR# port-sparc/1241